<resources>
    <string name="app_name">Travel Journal</string>
    <string name="manage_trip">Manage Trip</string>
    <string name="title_manage_trip">Manage Trip</string>
    <string name="trip_name">Trip Name</string>
    <string name="destination">Destination</string>
    <string name="trip_type">Trip Type</string>
    <string name="price_eur">Price(eur)</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="rating">Rating</string>
    <string name="save">SAVE</string>
    <string name="gallery_photo">Gallery photo</string>
    <string name="take_picture">Take Picture</string>
    <string name="select">SELECT</string>
</resources>
