<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/sixteen_dp"
    tools:context=".ManageTripActivity">

    <!-- scroll continut total -->
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trip_name"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_info"
                android:drawablePadding="@dimen/five_dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten_dp"
                android:text="@string/destination"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_destination"
                android:drawablePadding="@dimen/five_dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten_dp"
                android:text="@string/trip_type"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten_dp"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="City break"
                    android:textColor="@color/grey_color" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="See side"
                    android:textColor="@color/grey_color" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mountains"
                    android:textColor="@color/grey_color" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten_dp"
                android:text="@string/price_eur"
                android:textStyle="bold" />

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten_dp"
                android:max="100"
                android:progress="8" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ten_dp"
                    android:layout_marginRight="@dimen/eight_dp"
                    android:layout_weight="1"
                    android:text="@string/start_date"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/eight_dp"
                    android:layout_marginTop="@dimen/ten_dp"
                    android:layout_weight="1"
                    android:text="@string/end_date"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/eight_dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|left"
                    android:text="@string/dd_mm_yyyy"
                    android:textColor="@color/grey_color" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/eight_dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|left"
                    android:text="@string/dd_mm_yyyy"
                    android:textColor="@color/grey_color" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fiveteen_dp"
                android:text="@string/rating"
                android:textStyle="bold" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten_dp"
                android:numStars="5"
                android:stepSize="0.5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ten_dp"
                    android:layout_marginRight="@dimen/eight_dp"
                    android:layout_weight="1"
                    android:text="@string/gallery_photo"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/eight_dp"
                    android:layout_marginTop="@dimen/ten_dp"
                    android:layout_weight="1"
                    android:text="@string/take_picture"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/eight_dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|left"
                    android:text="@string/select"
                    android:textColor="@color/color_black" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/eight_dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|left"
                    android:text="@string/select"
                    android:textColor="@color/color_black" />
            </LinearLayout>


            <Button
                style="@style/Base.Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/fiveteen_dp"
                android:background="@color/color_button"
                android:text="@string/save"
                android:textColor="@color/white" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>